Bug 1903905: Remove channels from mPending when they are closed. r=ng

Also, put mPending in the "main and STS" group where it belonged, and add a lock annotation.

Differential Revision: https://phabricator.services.mozilla.com/D215420