netwerk/sctp/datachannel/DataChannel.cpp
@@ -417,7 +417,7 @@ DataChannelConnection::~DataChannelConnection() {
   // sctp thread if we were in a callback when the DOM side shut things down.
   ASSERT_WEBRTC(mState == DataChannelConnectionState::Closed);
   MOZ_ASSERT(!mMasterSocket);
-  MOZ_ASSERT(mPending.GetSize() == 0);
+  MOZ_ASSERT(mPending.empty());
 
   if (!IsSTSThread()) {
     // We may be on MainThread *or* on an sctp thread (being called from
@@ -994,21 +994,8 @@ void DataChannelConnection::CompleteConnect() {
 
 // Process any pending Opens
 void DataChannelConnection::ProcessQueuedOpens() {
-  // The nsDeque holds channels with an AddRef applied.  Another reference
-  // (may) be held by the DOMDataChannel, unless it's been GC'd.  No other
-  // references should exist.
-
-  // Can't copy nsDeque's.  Move into temp array since any that fail will
-  // go back to mPending
-  nsRefPtrDeque<DataChannel> temp;
-  RefPtr<DataChannel> temp_channel;
-  while (nullptr != (temp_channel = mPending.PopFront())) {
-    temp.Push(temp_channel.forget());
-  }
-
-  RefPtr<DataChannel> channel;
-
-  while (nullptr != (channel = temp.PopFront())) {
+  std::set<RefPtr<DataChannel>> temp(std::move(mPending));
+  for (auto channel : temp) {
     if (channel->mHasFinishedOpen) {
       DC_DEBUG(("Processing queued open for %p (%u)", channel.get(),
                 channel->mStream));
@@ -2482,7 +2469,7 @@ already_AddRefed<DataChannel> DataChannelConnection::OpenFinish(
     DC_DEBUG(("Queuing channel %p (%u) to finish open", channel.get(), stream));
     // Also serves to mark we told the app
     channel->mHasFinishedOpen = true;
-    mPending.Push(channel);
+    mPending.insert(channel);
     return channel.forget();
   }
 
@@ -2979,6 +2966,7 @@ void DataChannelConnection::CloseLocked(DataChannel* aChannel) {
     // reset.
     mChannels.Remove(channel);
   }
+  mPending.erase(channel);
 
   // This is supposed to only be accessed from Main thread, but this has
   // been accessed here from the STS thread for a long time now.
@@ -3023,13 +3011,13 @@ void DataChannelConnection::CloseAll() {
   }
 
   // Clean up any pending opens for channels
-  RefPtr<DataChannel> channel;
-  while (nullptr != (channel = mPending.PopFront())) {
+  for (const auto& channel : mPending) {
     DC_DEBUG(("closing pending channel %p, stream %u", channel.get(),
               channel->mStream));
     MutexAutoUnlock lock(mLock);
     channel->Close();  // also releases the ref on each iteration
   }
+  mPending.clear();
   // It's more efficient to let the Resets queue in shutdown and then
   // SendOutgoingStreamReset() here.
   SendOutgoingStreamReset();
